item, weapon, armor, and spell data viewers looking mighty nice

--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#75C7AE"
-        android:text="@string/navigate_back"
+        android:text="@string/word_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -256,7 +256,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
-                        android:text="@string/text_abilities"
+                        android:text="@string/word_abilities"
                         android:textColor="@color/black"
                         android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
