--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:text="@string/navigate_characters"
+            android:text="@string/word_characters"
             android:textColor="@color/white"
             android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_view_characters"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:text="@string/navigate_information"
+            android:text="@string/word_information"
             android:textColor="@color/white"
             android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_view_data"
@@ -109,7 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:text="@string/navigate_dice_roller"
+            android:text="@string/phrase_dice_roller"
             android:textColor="@color/white"
             android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_dice_roller"
@@ -136,7 +136,7 @@
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
             android:background="@color/menu_grey"
-            android:text="@string/text_title_main_menu"
+            android:text="@string/phrase_main_menu"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="30sp"
