--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
         android:ems="10"
-        android:hint="@string/text_default_character_name"
+        android:hint="@string/word_name"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -80,7 +80,7 @@
         android:layout_marginTop="65dp"
         android:layout_marginEnd="40dp"
         android:backgroundTint="@color/turquoise"
-        android:text="@string/navigate_next"
+        android:text="@string/word_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/centerAligner"
         app:layout_constraintTop_toBottomOf="@id/EDIT_CHARISMA" />
@@ -92,7 +92,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="65dp"
         android:backgroundTint="@color/turquoise"
-        android:text="@string/action_character_roll_stats"
+        android:text="@string/phrase_roll_stats"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_WISDOM" />
@@ -115,7 +115,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/turquoise"
-        android:text="@string/action_character_minimum_health"
+        android:text="@string/phrase_minimum_health"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintTop_toTopOf="@id/centerAligner" />
@@ -126,7 +126,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:backgroundTint="@color/turquoise"
-        android:text="@string/action_character_maximum_health"
+        android:text="@string/phrase_maximum_health"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_minimum_health"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_minimum_health" />
@@ -137,7 +137,7 @@
         android:layout_height="50dp"
         android:backgroundTint="@color/turquoise"
         android:padding="1dp"
-        android:text="@string/action_character_roll_health"
+        android:text="@string/phrase_roll_health"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/character_creator_page_one_maximum_health"
         app:layout_constraintHorizontal_bias="0.0"
@@ -149,7 +149,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#75C7AE"
-        android:text="@string/navigate_back"
+        android:text="@string/word_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -169,7 +169,7 @@
         android:id="@+id/STRENGTH_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ability_text_strength"
+        android:text="@string/word_strength"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/STRENGTH_ICON"
         app:layout_constraintStart_toStartOf="@id/STRENGTH_ICON"
@@ -262,7 +262,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="@string/ability_text_dexterity"
+        android:text="@string/word_dexterity"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_DEXTERITY"
         app:layout_constraintEnd_toEndOf="@id/DEXTERITY_ICON"
@@ -299,7 +299,7 @@
         android:id="@+id/CONSTITUTION_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ability_text_constitution"
+        android:text="@string/word_constitution"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@id/EDIT_CONSTITUTION"
         app:layout_constraintEnd_toEndOf="@id/CONSTITUTION_ICON"
@@ -336,7 +336,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="@string/ability_text_intelligence"
+        android:text="@string/word_intelligence"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_INTELLIGENCE"
         app:layout_constraintEnd_toEndOf="@id/INTELLIGENCE_ICON"
@@ -372,7 +372,7 @@
         android:id="@+id/WISDOM_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ability_text_wisdom"
+        android:text="@string/word_wisdom"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_WISDOM"
         app:layout_constraintEnd_toEndOf="@id/WISDOM_ICON"
@@ -408,7 +408,7 @@
         android:id="@+id/CHARISMA_TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ability_text_charisma"
+        android:text="@string/word_charisma"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/EDIT_CHARISMA"
         app:layout_constraintEnd_toEndOf="@id/CHARISMA_ICON"
