--- a/app/src/main/res/layout/items_information.xml
+++ b/app/src/main/res/layout/items_information.xml
@@ -38,18 +38,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/weaponDamage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/weapon_page_blue"
-                android:backgroundTint="#69B4FF"
-                android:padding="5dp"
-                android:text="@string/colon_damage"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/weaponDescription"
+                android:id="@+id/itemDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -60,18 +49,7 @@
                 android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/weaponType"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/weapon_page_blue"
-                android:backgroundTint="#69B4FF"
-                android:padding="5dp"
-                android:text="@string/colon_type"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/weaponRarity"
+                android:id="@+id/itemRarity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -82,18 +60,40 @@
                 android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/weaponBonuses"
+                android:id="@+id/itemValue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@color/weapon_page_blue"
                 android:backgroundTint="#69B4FF"
                 android:padding="5dp"
-                android:text="@string/colon_attack_bonus"
+                android:text="@string/colon_value"
                 android:textColor="@color/black" />
 
             <TextView
-                android:id="@+id/weaponTags"
+                android:id="@+id/itemType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
+                android:padding="5dp"
+                android:text="@string/colon_type"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/itemWeight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/weapon_page_blue"
+                android:backgroundTint="#69B4FF"
+                android:padding="5dp"
+                android:text="@string/colon_weight"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/itemTags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -101,17 +101,6 @@
                 android:backgroundTint="#69B4FF"
                 android:padding="5dp"
                 android:text="@string/colon_tag"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/weaponProjectile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/weapon_page_blue"
-                android:backgroundTint="#69B4FF"
-                android:padding="5dp"
-                android:text="@string/colon_projectile"
                 android:textColor="@color/black" />
 
         </LinearLayout>
