--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/turquoise"
-        android:text="@string/navigate_back"
+        android:text="@string/word_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -87,7 +87,7 @@
         android:layout_height="62dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="30dp"
-        android:text="@string/text_common_settings"
+        android:text="@string/word_settings"
         android:textAlignment="center"
         android:textSize="40dp"
         android:textStyle="bold"
