--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="list_item_spacing">16dp</dimen>
     <dimen name="list_item_spacing_half">8dp</dimen>
-    <dimen name="text_size_ability_names">26sp</dimen>
+    <dimen name="text_size_ability_scores">32sp</dimen>
+    <dimen name="text_size_save_mod">20sp</dimen>
+    <dimen name="text_size_ability_names">22sp</dimen>
+    <dimen name="text_size_int_con">20sp</dimen>
 </resources>
