--- a/app/src/main/res/layout/armor_information.xml
+++ b/app/src/main/res/layout/armor_information.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/spacebackgroundgif"
+    tools:background="#CC00097A"
     tools:context=".ArmorInformation">
 
     <Button
@@ -25,7 +26,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:background="#FFFFFF"
+        android:background="@color/menu_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/backtodataview" />
@@ -50,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#FFFFFF"
+                android:background="@color/menu_grey"
                 android:padding="5dp"
                 android:text="Armor Class:"
                 android:textColor="#757575" />
@@ -60,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#FFFFFF"
+                android:background="@color/menu_grey"
                 android:padding="5dp"
                 android:text="Price:"
                 android:textColor="#757575" />
@@ -70,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#FFFFFF"
+                android:background="@color/menu_grey"
                 android:padding="5dp"
                 android:text="Weight:"
                 android:textColor="#757575" />
@@ -80,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="#FFFFFF"
+                android:background="@color/menu_grey"
                 android:padding="5dp"
                 android:text="Type:"
                 android:textColor="#757575" />
