--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -79,8 +79,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
         android:layout_marginEnd="40dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_next"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/centerAligner"
         app:layout_constraintTop_toBottomOf="@id/EDIT_CHARISMA" />
@@ -91,8 +92,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="65dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/phrase_roll_stats"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/EDIT_WISDOM" />
@@ -105,7 +107,7 @@
         android:ems="10"
         android:hint="5"
         android:inputType="text"
-        android:maxLength="3"
+        android:maxLength="2"
         app:layout_constraintBottom_toTopOf="@id/character_creator_page_one_minimum_health"
         app:layout_constraintEnd_toEndOf="@id/character_creator_page_one_minimum_health"
         app:layout_constraintStart_toStartOf="@id/character_creator_page_one_minimum_health" />
@@ -114,8 +116,9 @@
         android:id="@+id/character_creator_page_one_minimum_health"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/phrase_minimum_health"
+        android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@id/centerAligner"
         app:layout_constraintTop_toTopOf="@id/centerAligner" />
@@ -125,8 +128,9 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/phrase_maximum_health"
+        android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_minimum_health"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_minimum_health" />
@@ -135,9 +139,10 @@
         android:id="@+id/character_creator_page_one_roll_health"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:padding="1dp"
         android:text="@string/phrase_roll_health"
+        android:textColor="@color/black"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/character_creator_page_one_maximum_health"
         app:layout_constraintHorizontal_bias="0.0"
@@ -148,8 +153,9 @@
         android:id="@+id/character_creator_page_one_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#75C7AE"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_back"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -182,6 +188,7 @@
         android:layout_marginBottom="61dp"
         android:ems="10"
         android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/INTELLIGENCE_ICON"
         app:layout_constraintEnd_toEndOf="@id/STRENGTH_ICON"
@@ -277,6 +284,7 @@
         android:layout_marginBottom="61dp"
         android:ems="10"
         android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/WISDOM_ICON"
         app:layout_constraintEnd_toEndOf="@id/DEXTERITY_ICON"
@@ -314,6 +322,7 @@
         android:layout_marginBottom="60dp"
         android:ems="10"
         android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/CHARISMA_ICON"
         app:layout_constraintEnd_toEndOf="@id/CONSTITUTION_ICON"
@@ -351,6 +360,7 @@
         android:layout_marginBottom="66dp"
         android:ems="10"
         android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/character_creator_page_one_roll_stats"
         app:layout_constraintEnd_toEndOf="@id/INTELLIGENCE_ICON"
@@ -387,6 +397,7 @@
         android:layout_marginBottom="123dp"
         android:ems="10"
         android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/character_creator_page_one_edit_health"
         app:layout_constraintEnd_toEndOf="@id/WISDOM_ICON"
@@ -424,6 +435,7 @@
         android:layout_marginBottom="65dp"
         android:ems="10"
         android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/character_creator_page_one_next_page"
         app:layout_constraintEnd_toEndOf="@id/CHARISMA_ICON"
