--- a/app/src/main/res/layout/character_creator_page_two.xml
+++ b/app/src/main/res/layout/character_creator_page_two.xml
@@ -81,7 +81,7 @@
         android:layout_marginStart="200dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="See Details"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@id/character_creator_page_two_background"
@@ -93,7 +93,7 @@
         android:id="@+id/character_creator_page_two_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
