--- a/app/src/main/res/layout/character_list.xml
+++ b/app/src/main/res/layout/character_list.xml
@@ -5,15 +5,16 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_grey"
     tools:context=".CharacterList">
 
     <Button
         android:id="@+id/character_list_make_new_character"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="5dp"
-        android:backgroundTint="@color/turquoise"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="@color/button_grey"
         android:text="Create Character"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +24,9 @@
         android:id="@+id/character_list_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/turquoise"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="Select your Character"
+        android:textColor="@color/white"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="80dp"
+        android:background="@color/button_grey"
         android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +59,8 @@
         android:id="@+id/character_list_view_selected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/turquoise"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/button_grey"
         android:text="View Character"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
