--- a/app/src/main/res/layout/data_view.xml
+++ b/app/src/main/res/layout/data_view.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fantasylibrary"
+    android:background="@color/background_grey"
     tools:context=".DataView">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,7 +14,7 @@
         android:id="@+id/dataViewBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,12 +25,12 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_weapons"
         android:textColor="@color/black"
         android:textSize="28sp"
+        app:layout_constraintBottom_toTopOf="@+id/armorinfo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/itemsInfo" />
@@ -40,12 +40,12 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_items"
         android:textColor="@color/black"
         android:textSize="28sp"
+        app:layout_constraintBottom_toTopOf="@+id/weaponsinfo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spellsinfo" />
@@ -55,29 +55,31 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="50dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_spells"
         android:textColor="@color/black"
         android:textSize="28sp"
+        app:layout_constraintBottom_toTopOf="@+id/itemsInfo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dataViewBack" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/armorinfo"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
-        android:backgroundTint="@color/turquoise"
+        android:layout_marginBottom="75dp"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_armor"
         android:textColor="@color/black"
         android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/weaponsinfo" />
 
