--- a/app/src/main/res/layout/armor_information.xml
+++ b/app/src/main/res/layout/armor_information.xml
@@ -5,15 +5,14 @@
     android:id="@+id/frameLayout10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spacebackgroundgif"
-    tools:background="#CC00097A"
+    tools:background="@color/background_grey"
     tools:context=".ArmorInformation">
 
     <Button
         android:id="@+id/backtodataview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +25,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
-        android:background="@color/menu_grey"
+        android:background="@color/button_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/backtodataview" />
@@ -51,40 +50,40 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/menu_grey"
+                android:background="@color/button_grey"
                 android:padding="5dp"
                 android:text="Armor Class:"
-                android:textColor="#757575" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/armorPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/menu_grey"
+                android:background="@color/button_grey"
                 android:padding="5dp"
                 android:text="Price:"
-                android:textColor="#757575" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/armorWeight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/menu_grey"
+                android:background="@color/button_grey"
                 android:padding="5dp"
                 android:text="Weight:"
-                android:textColor="#757575" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/armorType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/menu_grey"
+                android:background="@color/button_grey"
                 android:padding="5dp"
                 android:text="Type:"
-                android:textColor="#757575" />
+                android:textColor="@color/black" />
         </LinearLayout>
     </ScrollView>
 
