--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -15,7 +15,7 @@
         android:layout_width="168dp"
         android:layout_height="113dp"
         android:layout_marginStart="16dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="Button"
         android:textColor="@color/black"
         app:cornerRadius="10dp"
@@ -29,7 +29,7 @@
         android:layout_width="168dp"
         android:layout_height="113dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="Button"
         android:textColor="@color/black"
         app:cornerRadius="10dp"
@@ -43,7 +43,7 @@
         android:layout_width="168dp"
         android:layout_height="113dp"
         android:layout_marginStart="16dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="Button"
         android:textColor="@color/black"
         app:cornerRadius="10dp"
@@ -57,7 +57,7 @@
         android:layout_width="168dp"
         android:layout_height="113dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="Button"
         android:textColor="@color/black"
         app:cornerRadius="10dp"
@@ -118,7 +118,7 @@
         android:id="@+id/HelpBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
