--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -4,21 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dragon_background"
+    android:background="@color/background_grey"
     tools:context=".MainMenu">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:backgroundTint="#000000"
-        android:padding="38dp">
+        android:padding="0dp">
 
         <Button
             android:id="@+id/main_menu_view_characters"
             android:layout_width="match_parent"
             android:layout_height="170dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="60dp"
-            android:backgroundTint="@color/menu_red"
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="@color/characters_red"
             android:contentDescription="view characters "
             app:cornerRadius="100dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,12 +57,14 @@
             android:id="@+id/main_menu_view_data"
             android:layout_width="match_parent"
             android:layout_height="170dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="40dp"
-            android:backgroundTint="@color/menu_green"
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="@color/info_green"
             android:contentDescription="Information page  "
             app:cornerRadius="100dp"
+            app:layout_constraintBottom_toTopOf="@id/main_menu_dice_roller"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/main_menu_view_characters" />
 
@@ -94,8 +98,10 @@
             android:id="@+id/main_menu_dice_roller"
             android:layout_width="match_parent"
             android:layout_height="170dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="40dp"
-            android:backgroundTint="@color/menu_orange"
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="@color/diceroller_orange"
             android:contentDescription="Dice Rollers "
             app:cornerRadius="100dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -132,10 +138,12 @@
         <TextView
             android:id="@+id/Title"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:background="@color/menu_grey"
+            android:layout_height="0dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="@color/button_grey"
+            android:gravity="center"
             android:padding="5px"
             android:text="@string/phrase_main_menu"
             android:textAlignment="center"
@@ -145,19 +153,20 @@
             app:cornerRadius="100dp"
             app:layout_constraintBottom_toBottomOf="@id/main_menu_settings"
             app:layout_constraintEnd_toStartOf="@id/main_menu_settings"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/main_menu_help_page"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.714"
+            app:layout_constraintTop_toTopOf="@id/main_menu_settings"
             tools:layout_constraintTop_toTopOf="@id/main_menu_settings" />
 
         <ImageButton
             android:id="@+id/main_menu_settings"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="4dp"
-            android:backgroundTint="@color/menu_grey"
+            android:layout_marginTop="54dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="@color/button_grey"
             android:contentDescription="setting page "
+            android:padding="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/cog"
             app:layout_constraintEnd_toEndOf="parent"
@@ -167,9 +176,12 @@
             android:id="@+id/main_menu_help_page"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="4dp"
-            android:backgroundTint="@color/menu_grey"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="54dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="#D5D4D4"
             android:contentDescription="Help page "
+            android:padding="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/skillcheck"
             app:layout_constraintStart_toStartOf="parent"
