--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -25,7 +25,7 @@
         android:id="@+id/SettingsBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="@string/word_back"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="365dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="Button"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +49,7 @@
         android:layout_width="365dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="Button"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +62,7 @@
         android:layout_width="365dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:backgroundTint="@color/turquoise"
+        android:backgroundTint="@color/button_grey"
         android:text="Button"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
